# macro

./: .coderabbit.yaml  .env-local-dev.enc  .env-local.enc  .env-localdev.enc  .gitattributes  .gitignore  AGENTS.md  LICENSE.md  LICENSE.txt  README.md  RUNNING_LOCALLY.md  VERSION  changes.md  docker-compose-databases.yml  docker-compose.local-e2e.yml  docker-compose.yml  flake.nix  justfile  local_stack.just  package.json  test.md
js/app/tauri/: Cargo.toml
rust/cloud-storage/: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.convert_service  Dockerfile.convert_service.dev  Dockerfile.convert_service.prebuilt  Dockerfile.cross-x86_64-unknown-linux-gnu  Dockerfile.dev  Dockerfile.prebuilt  Dockerfile.search_processing_service  Dockerfile.search_processing_service.dev  Dockerfile.search_processing_service.prebuilt  Dockerfile.sha-cleanup-worker  README.md  clippy.toml  database.just  deny.toml  hx  justfile  sqlx.just
rust/cloud-storage/.cargo/: config.toml
rust/cloud-storage/.config/: hakari.toml
rust/cloud-storage/.sqlx/: query-000dcd3c4befc3975adf3bee932023bec273d62d6c2f233c3236ffebbfaf5810.json  query-006d6742d6218213f59326abc8c5e0df14ddf5e7c04a2cf05d8bff6ea4279add.json  query-006ebc0f8730714a1755ea1dbfee6e8c5bdc57566579a482dedb774aeda6a1c2.json  query-012063ce1220cd6f1b04eeefa088324d50ac472be760c0efe10b5060b0878c75.json  query-015a45b5c16b4bcc135372478d585af4ce10f5f6ae5e3578637b66655ea6d67e.json  query-01807869314da98fb35b92299c5bc1316bc32d77d88903d294f90c0593ff6f83.json  query-01ee626a0234bc3bd1463f146588eeff4d4fb032d4b9f1153ef2415f50bdae2f.json  query-020ad49dd342e529563c91a7d2403de9196482e24765f4b2c93d2da50273d69c.json  query-03126b7a70835aac508c3f236c9e5bcd98c0df2596f1d098c08cd4308583f307.json  query-033759a1748c41359a8cf5204f457eed63182d21b432b58fd25b7524d1dc0092.json  query-036fca567f0d90c18fe528869a2e734700b1978cdf1a62bcefcb3a9bad3b6eb5.json  query-039dd65419a635365c37d46699bf115e771ceae4526e0a13928152e2bb1bb9b3.json  query-03d9c7e2c8988471423626370441600e47fbaf2a4e9ce6bb287b116679248db8.json  query-046aa54b375545002a615891a34147d0d4f2c1e409bf1aa2263b84c88e2deda9.json  query-04d60026064c2948d7a528352bb3bb086ba5a39c1dc656aec25f2dd2a4eb249e.json  query-050da6296d73cdc66ea8dbffcb10267162c71897f66fc9de39ef28c23ab6f918.json  query-056dbddac4957596098ed8444564f7eb4ee08f375c95d9e40bd879d1439a8342.json  query-05c2cf10e578df97df70d5b372d6bd4d5a2baf8313799b21496ce399d3612b1b.json  query-06072374ba47adb6156d2a4d0160ab3ab9a686e9617ce4aea0e768cdc3c78f86.json  query-060ac46a89df4da317917f28ca8d95dc07b98f4a64effa9b76d58089fb0728b1.json  query-062a45b8e7d65006120b1369981c4e04e513e99855ca9dab076768d43e189a80.json  query-0643eed420f0f10eab30aa91b17d858d0f765ba260e5fa84edf3741df03f6566.json  query-0710b66e8a6608c340848ad6295fc012f06f1c298d1b287eebd7be0b89766702.json  query-0744566104aa67d5e88c96c3f1e52eb15603cfb48029d43dc507b9012088517b.json  query-07feb08ae2f8494b1a9043b878ac356af9e557d3b3d67a1a9cf2f07d292883c2.json  query-081e71f5dae75d12f512d95febfffe28cdc4f8cc83542bf69b8c502b4892a6da.json  query-0893292d05dc339bc516ddc4e2e27ee0f730dd38e1d82bd2a049d38cb7abb275.json  query-08d035b4ba64e5c981db5899f59dd65c406184ebcfe92ee3fecd979dc7da2f3f.json  query-096cff82c1f50ae5f4a5699ba9e1f35280fefe178bfc01701fc09b8962def475.json  query-099d5a355490ebd8fe221bc0526af0a38305c090cdb791212b5968c24ae5d5f4.json  query-0a4d1f2c9890cc537fde22835fc5298215a79e06fd983ac9a13f52836719e8fc.json  query-0a4ef2f94648e1a6de6dad96e942a9b987f96526f5865fcc9c43f6179567a891.json  query-0b0ee8515cb079ef1cedbb5d8f254fef2bdc00de80faccc661bc89ffbabc7eb4.json  query-0c2a70e1c21ea156df7ebcfac398759e58dad1a553de9c0bbbb2480f65eadc13.json  query-0c36658e4c00abbd672fd1fa7934cb81f5065482c471fffa2bf248f73782a87c.json  query-0c628b1df314ea96c6852c56c9750d59246c62988cff8134853a31e2530c68f8.json  query-0d9d272f0886376c4a756a4296517b933697934a2b3d52e931bcb2f1dc64ac87.json  query-0e0422c73b3bdb5c60680cec7581ac905f34c70bd295694a120e8dd7891e3853.json  query-0e241930c0e8b940ac3f513f8081270a0b93e88f5b7f7f7fc36276b3718b8297.json  query-0e38fa7c2ebae20feb864567132405260eb8fd223e65f4c6da337a8fbe2acc82.json  (+709 more)
rust/cloud-storage/agent/: Cargo.toml
rust/cloud-storage/ai/: Cargo.toml
rust/cloud-storage/ai_format/: Cargo.toml
rust/cloud-storage/ai_projections/: Cargo.toml
rust/cloud-storage/ai_projections_refresh_handler/: Cargo.toml  justfile
rust/cloud-storage/ai_tools/: Cargo.toml
rust/cloud-storage/ai_toolset/: CLAUDE.md  Cargo.toml  TOOL_DESIGN.md  TOOL_INTEGRATION.md
rust/cloud-storage/ai_usage/: Cargo.toml
rust/cloud-storage/analytics_client/: Cargo.toml
rust/cloud-storage/anthropic/: Cargo.toml
rust/cloud-storage/attachment/: CLAUDE.md  Cargo.toml  todo.md
rust/cloud-storage/authentication_service/: Cargo.toml
rust/cloud-storage/authentication_service_client/: Cargo.toml
rust/cloud-storage/backfill_entity_access/: Cargo.toml  justfile
rust/cloud-storage/bot_id/: Cargo.toml
rust/cloud-storage/bots/: Cargo.toml
rust/cloud-storage/cal/: Cargo.toml
rust/cloud-storage/call/: Cargo.toml
rust/cloud-storage/call_recording_preview_handler/: Cargo.toml  event.json  justfile
rust/cloud-storage/channel_bots/: Cargo.toml
rust/cloud-storage/channels/: Cargo.toml  justfile
rust/cloud-storage/chat/: Cargo.toml  PLAN.md
rust/cloud-storage/comms/: Cargo.toml
rust/cloud-storage/comms_db_client/: Cargo.toml  justfile
rust/cloud-storage/comms_service/: Cargo.toml  README.md
rust/cloud-storage/connection/: Cargo.toml
rust/cloud-storage/connection_gateway/: Cargo.toml  justfile
rust/cloud-storage/connection_gateway_client/: Cargo.toml
rust/cloud-storage/connection_gateway_models/: Cargo.toml
rust/cloud-storage/contacts/: Cargo.toml
rust/cloud-storage/contacts_db_client/: Cargo.toml  justfile
rust/cloud-storage/contacts_service/: Cargo.toml
rust/cloud-storage/convert_service/: Cargo.toml
rust/sync-service/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  justfile  package-lock.json  package.json  wrangler.docker.toml  wrangler.toml
(+4407 files in other folders)
