[workspace]
resolver = "2"

members = [
  "ai",
  "ai_format",
  "ai_tools",
  "ai_toolset",
  "analytics_client",
  "anthropic",
  "authentication_service",
  "authentication_service_client",
  "channels",
  "chat",
  "comms_db_client",
  "comms_service",
  "comms_service_client",
  "connection_gateway",
  "connection_gateway_client",
  "connection_gateway_models",
  "contacts_db_client",
  "contacts_service",
  "convert_service",
  "cowlike",
  "dataloss_prevention_handler",
  "delete_chat_handler",
  "deleted_item_poller",
  "document_cognition_service",
  "document_cognition_service_client",
  "document_storage_service",
  "document_storage_service_client",
  "document_sub_type",
  "document_text_extractor",
  "documents",
  "docx_unzip_handler",
  "dynamodb_client",
  "email_contact_search",
  "email_db_client",
  "email_refresh_handler",
  "email_scheduled_handler",
  "email_service",
  "email_service_client",
  "email_sfs_delete_handler",
  "email_suppression_handler",
  "email_utils",
  "email_validator",
  "entity_access",
  "frecency",
  "fusionauth",
  "github",
  "gmail_client",
  "image_proxy_service",
  "integration_tests/*",
  "lambda_client",
  "lexical_client",
  "macro_auth",
  "macro_aws_config",
  "macro_cache_client",
  "macro_client_errors",
  "macro_cors",
  "macro_db_client",
  "macro_db_migrator",
  "macro_env",
  "macro_middleware",
  "macro_project_utils",
  "macro_redis",
  "macro_service_client",
  "macro_sha_count_client",
  "macro_share_permissions",
  "macro_uuid",
  "mention_utils",
  "model",
  "model_notifications",
  "model_user",
  "models_dcs",
  "models_email",
  "models_opensearch",
  "models_pagination",
  "models_permissions",
  "models_properties",
  "models_search",
  "models_search_cursor",
  "models_sfs",
  "models_soup",
  "models_team",
  "name_search",
  "non_empty",
  "notification",
  "notification_db_client",
  "notification_sandbox",
  "notification_service",
  "opensearch_client",
  "opensearch_query_builder",
  "organization_retention_handler",
  "organization_retention_trigger",
  "permission",
  "properties",
  "properties_db_client",
  "properties_service",
  "rate_limit",
  "referral",
  "referral_invitation",
  "roles_and_permissions",
  "rpc/axum_rpc",
  "rpc/axum_rpc_emit",
  "rpc/axum_rpc_parse",
  "s3_client",
  "scribe",
  "search_processing_service",
  "search_service",
  "search_service_client",
  "search_upload_handler",
  "secretsmanager_client",
  "seed_cli",
  "ses_client",
  "sha_cleanup_worker",
  "sns_client",
  "soup",
  "sqs_client",
  "sqs_worker",
  "static_file_service",
  "static_file_service_client",
  "sync_service_client",
  "system_properties",
  "teams",
  "unfurl_service",
  "upload_extractor_lambda_handler",
  "upload_extractor_lambda_trigger",
  "user_link_cleanup_handler",
  "user_quota",
  "worker_trigger",
]

[workspace.dependencies]
anyhow = "1.0.93"
async-openai = { version = "0.28.3", features = ["byot"] }
async-stream = "0.3.6"
async-trait = "0.1.86"
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.98.0"
aws-sdk-lambda = "1.104.0"
aws-sdk-s3 = "1.121.0"
aws-sdk-secretsmanager = "1.93.0"
aws-sdk-sesv2 = "1.103.0"
aws-sdk-sns = "1.90.0"
aws-sdk-sqs = "1.91.0"
aws-smithy-types = "1.2.13"
aws_lambda_events = { version = "0.16.0", default-features = false }
axum = { version = "0.8", features = ["tower-log"] }
axum-extra = { version = "0.10" }
base64 = "0.22.1"
cached = { version = "0.54.0", features = ["async_tokio_rt_multi_thread"] }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
cloudfront_sign = "0.3.0"
cookie = "0.18.1"
csv = "1"
dashmap = "6.1.0"
dateparser = "0.2.1"
dotenvy = "0.15.7"
ego-tree = "0.6.2"
either = "1"
futures = "0.3.31"
hex = "0.4.3"
http = "1"
http-body-util = "0.1.2"
inquire = "0.7"
itertools = "0.14"
jsonwebtoken = { git = "https://github.com/whutchinson98/jsonwebtoken", features = [
  "rust_crypto",
] }
lambda_runtime = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.26"
mockall = "0.13"
nom = "8"
openssl = { version = "0.10.71", features = ["vendored"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
ordered-float = "5"
paste = "1"
pdfium-render = { version = "0.8.28" }
quote = "1"
rand = "0.9.0"
recursion = "0.5.4"
redis = "1.0.3"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["hickory-dns", "json"] }
reqwest-middleware = { git = "https://github.com/seanaye/reqwest-middleware" }
rootcause = "0.11"
schemars = { version = "1.0.4", features = ["chrono04", "uuid1"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde_json = { version = "1.0.132" }
serde_repr = "0.1"
serde_with = { version = "3.12.0", features = ["base64"] }
sha2 = "0.10.8"
sqlx = { version = "0.8.6", features = [
  "chrono",
  "postgres",
  "runtime-tokio-native-tls",
  "uuid",
] }
sqlx-core = { version = "0.8.6" }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.0"
time = "0.3.37"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17" }
tokio-util = "0.7.13"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = [
  "compression-gzip",
  "cors",
  "trace",
] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-tree = "0.4.0"
unsynn = "0.3"
urlencoding = "2.1.3"
utoipa = { version = "5.4.0", features = [
  "axum_extras",
  "chrono",
  "repr",
  "uuid",
] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
uuid = { version = "1.15.1", features = ["fast-rng", "serde", "v4", "v7"] }
# this is pinned to match axum 0.7.9 dependency requirements
async-stripe = { version = "0.41", default-features = false, features = [
  "billing",
  "checkout",
  "runtime-tokio-hyper",
] }
axum-macros = "0.5"
bytes = "1.11.1"
bzip2 = { version = "0.5.1", default-features = false, features = [
  "libbz2-rs-sys",
] }
derive_builder = "0.20.2"
doppleganger = "0.5"
js-sys = "0.3"
once_cell = "1.21.3"
scraper = "0.18"
strum_macros = "0.27.1"
unicode-segmentation = "1.9.0"
url = "2.5.0"
zip = "=2.4.2"
