[workspace]
resolver = "2"

members = [
  "authentication_service",
  "backfill_entity_access",
  "comms_service",
  "connection_gateway",
  "contacts_service",
  "convert_service",
  "dataloss_prevention_handler",
  "delete_chat_handler",
  "deleted_item_poller",
  "document_cognition_service",
  "document_cognition_service/load-test",
  "document_storage_service",
  "document_text_extractor",
  "document_upload_finalizer_handler",
  "docx_unzip_handler",
  "email_refresh_handler",
  "email_scheduled_handler",
  "email_service",
  "email_sfs_delete_handler",
  "email_suppression_handler",
  "image_optimizer",
  "image_proxy_service",
  "integration_tests/local_e2e",
  "mcp_service",
  "memory",
  "notification_sandbox",
  "notification_service",
  "organization_retention_handler",
  "organization_retention_trigger",
  "properties_service",
  "scheduled_action",
  "search_processing_service",
  "search_service",
  "search_upload_handler",
  "seed_cli",
  "sha_cleanup_worker",
  "static_file_service",
  "tools/native_app_server",
  "unfurl",
  "unfurl_service",
  "upload_extractor_lambda_handler",
  "upload_extractor_lambda_trigger",
  "user_link_cleanup_handler",
  "worker_trigger",
]

[workspace.dependencies]
anyhow = "1.0.100"
askama = "0.14"
async-openai = { version = "0.36.1", features = [
  "byot",
  "chat-completion",
  "completions",
] }
async-stream = "0.3.6"
async-trait = "0.1.86"
aws-config = { version = "1.8.16", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.111.0"
aws-sdk-lambda = "1.122.0"
aws-sdk-s3 = "1.132.0"
aws-sdk-secretsmanager = "1.104.0"
aws-sdk-sesv2 = "1.118.0"
aws-sdk-sns = "1.99.0"
aws-sdk-sqs = "1.98.0"
aws-smithy-types = "1.4.7"
aws_lambda_events = { version = "0.16.0", default-features = false }
axum = { version = "0.8", features = ["tower-log"] }
axum-extra = { version = "0.10" }
base64 = "0.22.1"
cached = { version = "0.54.0", features = ["async_tokio_rt_multi_thread"] }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
cloudfront_sign = "0.3.0"
cookie = "0.18.1"
csv = "1"
dashmap = "6.1.0"
dateparser = "0.2.1"
dotenvy = "0.15.7"
ego-tree = "0.6.2"
either = "1"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
http = "1"
http-body-util = "0.1.2"
image = "0.25"
inquire = "0.7"
itertools = "0.14"
jsonwebtoken = { git = "https://github.com/whutchinson98/jsonwebtoken", features = [
  "rust_crypto",
] }
lambda_runtime = "0.13.0"
lazy_static = "1.5.0"
livekit-api = { version = "0.4.16", default-features = false, features = [
  "access-token",
  "rustls-tls-webpki-roots",
  "services-tokio",
  "webhooks",
] }
livekit-protocol = "0.7.2"
log = "0.4.26"
mockall = "0.13"
nom = "8"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = [
  "grpc-tonic",
  "internal-logs",
  "logs",
  "metrics",
  "trace",
] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
ordered-float = "5"
paste = "1"
pdfium-render = { version = "0.8.28" }
pgvector = { version = "0.4", features = ["postgres", "sqlx"] }
quote = "1"
rand = "0.9.0"
recursion = "0.5.4"
redis = "1.0.3"
regex = "1.11.1"
reqwest = { version = "0.13", default-features = false, features = [
  "form",
  "hickory-dns",
  "json",
  "rustls",
] }
rmcp = "1.6.0"
rootcause = { version = "0.12" }
schemars = { version = "1.0.4", features = ["chrono04", "uuid1"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde_json = { version = "1.0.132" }
serde_repr = "0.1"
serde_with = { version = "3.12.0", features = ["base64"] }
sha2 = "0.10.8"
sqlx = { version = "0.8.6", features = [
  "chrono",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
sqlx-core = { version = "0.8.6" }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.0"
time = "0.3.37"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17" }
tokio-tungstenite = { version = "0.28", default-features = false, features = [
  "connect",
  "rustls-tls-webpki-roots",
] }
tokio-util = "0.7.13"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = [
  "compression-gzip",
  "cors",
  "trace",
] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-tree = "0.4.0"
tungstenite = { version = "0.28", features = ["url"] }
unsynn = "0.3"
urlencoding = "2.1.3"
utoipa = { version = "5.4.0", features = [
  "axum_extras",
  "chrono",
  "repr",
  "uuid",
] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
uuid = { version = "1.15.1", features = ["fast-rng", "serde", "v4", "v7"] }
# this is pinned to match axum 0.7.9 dependency requirements
async-stripe = { version = "0.41", default-features = false, features = [
  "billing",
  "checkout",
  "runtime-tokio-hyper-rustls-webpki",
] }
axum-macros = "0.5"
bytes = "1.11.1"
bzip2 = { version = "0.5.1", default-features = false, features = [
  "libbz2-rs-sys",
] }
derive_builder = "0.20.2"
doppleganger = "0.5"
js-sys = "0.3"
once_cell = "1.21.3"
scraper = "0.18"
serde_urlencoded = "0.7.1"
strum_macros = "0.27.1"
unicode-segmentation = "1.9.0"
url = "2.5.0"
zip = "=2.4.2"
