[package]
name = "sync_service"
version = "0.1.0"
edition = "2024"
authors = ["synoet <teonys@nyu.edu>"]
build = "build.rs"

[features]
default = ["bebop-owned-all", "do-sqlite-snapshot-storage", "search-service"]
no-network-deps = []
do-sqlite-snapshot-storage = []
kv-snapshot-storage = []
r2-snapshot-storage = []
search-service = []
bebop-owned-all = []
create-default-state = []
alarm-keep-alive = []

[lib]
crate-type = ["cdylib"]

[package.metadata.release]
release = false

[profile.release]
# enable link time optimization
lto = true
# optimize for size
opt-level = 's'
# even smaller but remove's vectorization, and is slower
#opt-level = 'z'

[package.metadata.wasm-pack.profile.release]
# https://github.com/rustwasm/wasm-pack/issues/1247
wasm-opt = true

[dependencies]
worker = { version = "0.7.4", features = ['d1'] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
  'time',
  'json',
  'env-filter',
] }
tracing-web = "0.1"
web-time =  "1.1.0"
time = { version = "0.3", features = ['wasm-bindgen'] }
bebop =  "3.1.3"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = "0.2.100"
uuid = { version = "1.16.0", features = ["v4", "js"] }
loro =  "1.5.6"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
matchit =  "0.8.4"

[build-dependencies]
bebop-tools = "3.1.3"
