[workspace]
members = [
  "input_accessory_plugin",
  "logger",
  "macro_bundle_updater_plugin",
  "navigation_plugin",
  "src-tauri",
]
package.edition = "2024"
resolver = "2"

[workspace.dependencies]
reqwest = "0.13"
rootcause = "0.12"
semver = "1"
serde = "1"
tauri = { git = "https://github.com/seanaye/tauri", branch = "seanaye/feat/expose-protocol-handlers" }
thiserror = "2"
tokio = "1"
tracing = "0.1"
url = "2.5.4"

[patch.crates-io]
tauri = { git = "https://github.com/seanaye/tauri", branch = "seanaye/feat/expose-protocol-handlers" }
tauri-runtime = { git = "https://github.com/seanaye/tauri", branch = "seanaye/feat/expose-protocol-handlers" }
tauri-runtime-wry = { git = "https://github.com/seanaye/tauri", branch = "seanaye/feat/expose-protocol-handlers" }
tauri-utils = { git = "https://github.com/seanaye/tauri", branch = "seanaye/feat/expose-protocol-handlers" }
tauri-macros = { git = "https://github.com/seanaye/tauri", branch = "seanaye/feat/expose-protocol-handlers" }
tauri-codegen = { git = "https://github.com/seanaye/tauri", branch = "seanaye/feat/expose-protocol-handlers" }
tauri-build = { git = "https://github.com/seanaye/tauri", branch = "seanaye/feat/expose-protocol-handlers" }
