[package]
edition = "2024"
name = "agent"
publish = false
version = "0.1.0"

[features]
debug-messages = []

[dependencies]
anyhow = { workspace = true }
async-openai = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
# Macro fork of rig (upstream main + with_non_strict_tools() on Responses
# API models). Drop back to crates.io once the patch lands upstream.
rig-core = { git = "https://github.com/macro-inc/rig", branch = "feat/responses-api-non-strict-tools" }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ai_toolset = { path = "../ai_toolset" }
attachment = { path = "../attachment" }
macro_user_id = { path = "../macro_user_id" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
model-entity = { path = "../model-entity" }
non_empty = { path = "../non_empty" }
