[package]
edition = "2024"
name = "ai"
publish = false
version = "0.1.0"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dev-dependencies]

[dependencies]
anyhow = { workspace = true }
async-openai = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
rand.workspace = true
reqwest = { workspace = true }
schemars = { workspace = true }
secrecy = "0.10.3"
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio.workspace = true
tracing = { workspace = true }
utoipa = { workspace = true }
anthropic = { path = "../anthropic" }
ai_toolset = { path = "../ai_toolset" }
macro_user_id = { path = "../macro_user_id" }
model_file_type = { path = "../model_file_type"}
attachment = { path = "../attachment" }
