[package]
edition = "2024"
name = "ai_projections"
publish = false
version = "0.1.0"

[features]
axum = [
  "dep:axum",
  "dep:model-error-response",
  "dep:model_user",
  "dep:utoipa",
]
default = ["axum", "inbound", "outbound", "ports"]
inbound = ["axum", "ports"]
outbound = [
  "dep:sqlx",
  "ports",
]
ports = ["dep:tokio"]

[dependencies]
# Core
anyhow = { workspace = true }
chrono = { workspace = true }
macro_user_id = { path = "../macro_user_id" }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

# Async runtime (for ports)
tokio = { workspace = true, optional = true }

# Axum dependencies (for inbound)
axum = { workspace = true, optional = true }
model-error-response = { path = "../model-error-response", optional = true }
model_user = { path = "../model_user", optional = true, features = ["axum"] }
utoipa = { workspace = true, optional = true }

# Outbound dependencies
sqlx = { workspace = true, optional = true }

[dev-dependencies]
http-body-util = { workspace = true }
macro_db_migrator = { path = "../macro_db_migrator" }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
