[package]
edition = "2024"
name = "ai_projections"
publish = false
version = "0.1.0"

[features]
axum = [
  "dep:axum",
  "dep:model-error-response",
  "dep:model_user",
  "dep:utoipa",
]
default = ["axum", "inbound", "outbound", "ports", "worker"]
inbound = ["axum", "ports"]
outbound = [
  "dep:sqlx",
  "dep:sqs_client",
  "dep:serde_json",
  "ports",
]
# Agent-backed projection generator (the outbound adapter that runs the AI
# toolset). Pulls in the heavy agent/toolset dependencies.
agent = [
  "outbound",
  "dep:ai_tools",
  "dep:ai_toolset",
  "dep:agent",
  "dep:ai_usage",
  "dep:futures",
]
ports = ["dep:tokio"]
worker = [
  "ports",
  "dep:sqs_worker",
  "dep:aws-sdk-sqs",
  "dep:serde_json",
]

[dependencies]
# Core
anyhow = { workspace = true }
chrono = { workspace = true }
macro_user_id = { path = "../macro_user_id" }
models_ai_projection = { path = "../models_ai_projection" }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

# Async runtime (for ports)
tokio = { workspace = true, optional = true }

# Axum dependencies (for inbound)
axum = { workspace = true, optional = true }
model-error-response = { path = "../model-error-response", optional = true }
model_user = { path = "../model_user", optional = true, features = ["axum"] }
utoipa = { workspace = true, optional = true }

# Outbound dependencies
sqlx = { workspace = true, optional = true }
sqs_client = { path = "../sqs_client", default-features = false, features = [
  "ai_projection",
], optional = true }

# Worker (inbound SQS poller) dependencies
sqs_worker = { path = "../sqs_worker", optional = true }
aws-sdk-sqs = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Agent generator dependencies (the AI toolset adapter)
ai_tools = { path = "../ai_tools", optional = true }
ai_toolset = { path = "../ai_toolset", optional = true }
agent = { path = "../agent", optional = true }
ai_usage = { path = "../ai_usage", optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
http-body-util = { workspace = true }
macro_db_migrator = { path = "../macro_db_migrator" }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
