[package]
edition = "2024"
name = "ai_tools"
publish = false
version = "0.1.0"

[dependencies]
ai = { path = "../ai" }
ai_format = { path = "../ai_format" }
ai_toolset = { path = "../ai_toolset" }
anthropic = { path = "../anthropic" }
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["macros"] }
chrono.workspace = true
dateparser.workspace = true
comms = { path = "../comms", features = ["outbound"] }
connection = { path = "../connection", default-features = false, features = [
  "ports",
] }
documents = { path = "../documents", features = ["ai_tools"] }
email = { path = "../email", features = ["ai_schema", "ai_tools", "axum", "outbound"] }
email_service_client = { path = "../email_service_client" }
entity_access = { path = "../entity_access" }
frecency = { path = "../frecency", features = ["outbound", "postgres"] }
item_filters = { path = "../item_filters" }
lazy_static.workspace = true
macro_db_client = { path = "../macro_db_client" }
model = { path = "../model" }
model_notifications = { path = "../model_notifications" }
models_dcs = { path = "../models_dcs" }
models_email = { path = "../models_email" }
models_pagination = { path = "../models_pagination" }
models_permissions = { path = "../models_permissions" }
notification = { path = "../notification" }
models_properties = { path = "../models_properties" }
models_search = { path = "../models_search" }
rand.workspace = true
schemars.workspace = true
scribe = { path = "../scribe", features = [
  "channel",
  "dcs",
  "document",
  "email",
  "static_file",
] }
search_service_client = { path = "../search_service_client" }
serde.workspace = true
serde_json.workspace = true
properties = { path = "../properties", features = ["ai_tools"] }
soup = { path = "../soup", features = ["ai_tools", "outbound"] }
sqlx.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true

[dev-dependencies]
cool_asserts = "2"
