[package]
edition = "2024"
name = "ai_tools"
publish = false
version = "0.1.0"

[features]
test-support = []

[dependencies]
agent = { path = "../agent" }
ai_usage = { path = "../ai_usage" }
anthropic = { path = "../anthropic", features = ["toolset"] }
attachment = { path = "../attachment" }
non_empty = { path = "../non_empty" }
ai_toolset = { path = "../ai_toolset" }
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["macros"] }
aws-sdk-sqs.workspace = true
call = { path = "../call", default-features = false, features = ["ai_tools", "outbound", "ports"] }
chat = { path = "../chat", features = ["ai_tools", "outbound"] }
channels = { path = "../channels", features = ["ai_tools", "outbound"] }
chrono.workspace = true
dateparser.workspace = true
comms = { path = "../comms", features = ["outbound"] }
connection = { path = "../connection", default-features = false, features = [
  "ports",
] }
crm = { path = "../crm" }
documents = { path = "../documents", features = ["ai_tools"] }
email = { path = "../email", features = ["ai_schema", "ai_tools", "axum", "outbound"] }
email_service_client = { path = "../email_service_client" }
entity_access = { path = "../entity_access" }
entity_access_management = { path = "../entity_access_management" }
foreign_entity = { path = "../foreign_entity" }
frecency = { path = "../frecency", features = ["outbound", "postgres"] }
futures.workspace = true
item_filters = { path = "../item_filters" }
lazy_static.workspace = true
lexical_client = { path = "../lexical_client" }
macro_aws_config = { path = "../macro_aws_config" }
macro_db_client = { path = "../macro_db_client" }
macro_env_var = { path = "../macro_env_var" }
macro_user_id = { path = "../macro_user_id" }
model = { path = "../model" }
model-entity = { path = "../model-entity" }
model_notifications = { path = "../model_notifications" }
models_dcs = { path = "../models_dcs" }
models_email = { path = "../models_email" }
models_pagination = { path = "../models_pagination" }
models_permissions = { path = "../models_permissions" }
notification = { path = "../notification", features = ["ai_tool"] }
prompt = { path = "../prompt" }
models_properties = { path = "../models_properties" }
models_search = { path = "../models_search" }
rand.workspace = true
readonly_pool = { path = "../readonly_pool" }
rootcause = { workspace = true }
schemars.workspace = true
search_service_client = { path = "../search_service_client" }
serde.workspace = true
serde_json.workspace = true
properties = { path = "../properties", features = ["ai_tools"] }
soup = { path = "../soup", features = ["ai_tools", "outbound"] }
sqs_client = { path = "../sqs_client", default-features = false, features = ["email", "gmail"] }
teams = { path = "../teams", default-features = false, features = ["ai_tools", "outbound"] }
sqlx.workspace = true
strum.workspace = true
sync_service_client = { path = "../sync_service_client" }
system_properties = { path = "../system_properties" }
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true
remote_env_var = { path = "../remote_env_var" }
macro_env = { path = "../macro_env" }
secretsmanager_client = { path = "../secretsmanager_client" }
aws-sdk-secretsmanager = { workspace = true }

macro_service_urls = { path = "../macro_service_urls" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
cool_asserts = "2"
