[package]
edition = "2024"
name = "analytics_client"
publish = false
version = "0.1.0"

[dependencies]
chrono = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
