[package]
edition = "2024"
name = "anthropic"
publish = false
version = "0.2.0"

[features]
default = ["openai"]
openai = ["dep:async-openai"]
toolset = ["dep:ai_toolset", "dep:async-trait", "dep:anyhow"]

[dev-dependencies]
rand = { workspace = true }


[dependencies]
tokio = { workspace = true, features = ["sync"]}
async-stream = { workspace = true }
futures = { workspace = true }
macro_env_var = { path = "../macro_env_var" }
reqwest = { workspace = true, features = ["stream"] }
tokio-util = { workspace = true, features = ["io"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio-stream = { workspace = true }
async-openai = { workspace = true, optional = true}
chrono.workspace = true
lazy_static = {workspace = true}
regex = { workspace = true }
ai_toolset = { path = "../ai_toolset", optional = true }
async-trait = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
