[package]
edition = "2024"
name = "attachment"
publish = false
version = "0.1.0"

[features]
provider = ["dep:futures"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
macro_user_id = { path = "../macro_user_id" }
non_empty = { path = "../non_empty" }
futures = { workspace = true, optional = true }
base64 = { workspace = true }
image = { workspace = true }
model_file_type = { path = "../model_file_type" }
model-entity = { path = "../model-entity" }
webp = "0.3.1"
