[package]
edition = "2024"
name = "backfill_entity_access"
publish = false
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
macro_entrypoint = { path = "../macro_entrypoint" }
macro_env_var = { path = "../macro_env_var" }
macro_uuid = { path = "../macro_uuid" }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
