[package]
edition = "2024"
name = "bot_id"
publish = false
version = "0.1.0"

[features]
schema = ["dep:utoipa"]
sqlx = ["dep:sqlx"]

[dependencies]
serde = { workspace = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true }
