[package]
edition = "2024"
name = "cal"
publish = false
version = "0.1.0"

[features]
all = ["axum", "outbound"]
axum = ["dep:axum", "dep:model-error-response", "dep:utoipa"]
outbound = ["dep:analytics_client"]

[dependencies]
analytics_client = { path = "../analytics_client", optional = true }
axum = { workspace = true, optional = true }
chrono = { workspace = true, features = ["serde"] }
hex = { workspace = true }
hmac = { workspace = true }
model-error-response = { path = "../model-error-response", optional = true }
rootcause = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
